--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.0.8",
+    "@types/qrcode": "^1.5.6",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -38,7 +39,9 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "nodemon": "^3.1.10",
+    "otplib": "^12.0.1",
     "prisma": "^6.11.0",
+    "qrcode": "^1.5.4",
     "sharp": "^0.33.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
