--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^24.0.8",
     "@types/qrcode": "^1.5.6",
     "axios": "^1.10.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
@@ -45,5 +46,8 @@
     "sharp": "^0.33.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^6.0.0"
   }
 }
