add palinly APIs

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,30 @@
-DATABASE_URL="your postgres db url (create locally using docker or use supabase or similiar service)"
-DIRECT_URL="if using supabase as db"
-SENDGRID_API_KEY=""
-SENDGRID_FROM_EMAIL=""
-FAL_KEY= "no need for now, as we are hosting our own ai model, currently your requests wont return video urls"
+DATABASE_URL=
+
+DIRECT_URL=
+SENDGRID_API_KEY=
+SENDGRID_FROM_EMAIL=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+ALIBABA_API_KEY=
+LUMA_API_KEY=
+EACHLABS_API_KEY=
+MINIMAX_API_KEY=
+
+RUNWARE_KEY=
+
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_S3_BUCKET=
+
+CLD_PREFIX=
+URL_CLOUD_NAME_FILTER=
+
+ADMIN_API_KEY=
+
+CIVITAI_API_KEY=
+
+NEXRENDER_API_KEY=
+
+Plainly_API_KEY=
